--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="classes/style.css">
+	<link rel="stylesheet" type="text/css" href="classes/Bootstrap/bootstrap.min.css">
 	<script src="classes/function.js" type="text/javascript"></script>
+	<script src="classes/Bootstrap/jquery.min.js" type="text/javascript"></script>
+	<script src="classes/Bootstrap/bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
