--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="classes/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="classes/Bootstrap/bootstrap.min.css">
 	<script src="classes/function.js" type="text/javascript"></script>
 	<script src="classes/Bootstrap/jquery.min.js" type="text/javascript"></script>
@@ -11,7 +12,7 @@
 <body>
 <header>
 <div class="header">
-<p>Lukas ist kacke</p>p
+<i class="fab fa-accessible-icon"></i>
 </div>
 
 
