--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -8,6 +8,7 @@
 	<script src="classes/function.js" type="text/javascript"></script>
 	<script src="classes/Bootstrap/jquery.min.js" type="text/javascript"></script>
 	<script src="classes/Bootstrap/bootstrap.min.js" type="text/javascript"></script>
+	<script src="classes/Sweetalerts/sweetalerts.min.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
