--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -12,11 +12,51 @@
 </head>
 <body>
 <header>
-<div class="header">
-<i class="fab fa-accessible-icon"></i>
-</div>
-
-
+    <div class="header">
+        <a href="index.php" class="logo"><img src="img/SS-LOGO.png"></a>
+        <p>Smart Systems</p>
+        <div class="header-right">
+          <p>Tel.: 0151 22046000 | Kontakt</p>
+          <p><i class="fas fa-user"></i>Anmeldung<i class="fa fa-caret-down"></i></p>
+        </div>
+			</div>
+			<div class="breadcrumb-nav">
+			
+    <div class="navbar_header">
+        <a href="#home">Über uns</a>
+        <a href="#news">Impressum</a>
+        <div class="dropdown_header">
+          <button class="dropbtn">Produkte
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <div class="header">
+              <h2>Produkte</h2>
+            </div>   
+            <div class="rows">
+              <div class="column">
+                <h3>Licht</h3>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+              <div class="column">
+                <h3>Webcam</h3>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+              <div class="column">
+                <h3>Whatever</h3>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
 </header>
 
 {content}
