--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -13,12 +13,18 @@
 <body>
 <header>
     <div class="header">
+      <div class="header-left">
         <a href="index.php" class="logo"><img src="img/SS-LOGO.png"></a>
         <p>Smart Systems</p>
-        <div class="header-right">
+      </div>
+      <div class="header-right">
+        <div class="contact">
           <p>Tel.: 0151 22046000 | Kontakt</p>
+        </div>
+        <div class="sign-in-out">
           <p><i class="fas fa-user"></i>Anmeldung<i class="fa fa-caret-down"></i></p>
         </div>
+      </div>
 			</div>
 			<div class="breadcrumb-nav">
 			
