--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -20,9 +20,7 @@
       <div class="header-right">
         <div class="contact">
           <p>Tel.: 0151 22046000 | Kontakt</p>
-        </div>
-        <div class="sign-in-out">
-          <p><i class="fas fa-user"></i>Anmeldung<i class="fa fa-caret-down"></i></p>
+          <p onclick="ShowLogin()"><i class="fas fa-user"></i>Anmeldung</i></p>
         </div>
       </div>
 			</div>
@@ -62,6 +60,27 @@
           </div>
         </div> 
       </div>
+    </div>
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" placeholder="Benutzernamen"/>
+                    <input type="password" placeholder="Passwort"/>
+                </div>
+                <div class="modal-footer">
+                  <p>Neu hier? <a style="color: red;" onclick="ShowRegister()">Jetzt Registrieren!</a></p>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Login</button>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
 
