--- a/templates/main.tpl.html
+++ b/templates/main.tpl.html
@@ -14,8 +14,7 @@
 <header>
     <div class="header">
       <div class="header-left">
-        <a href="index.php" class="logo"><img src="img/SS-LOGO.png"></a>
-        <p>Smart Systems</p>
+        <a href="index.php" class="logo"><img src="img/logo.png"></a>
       </div>
       <div class="header-right">
         <div class="contact">
