--- a/classes/style.css
+++ b/classes/style.css
@@ -28,9 +28,8 @@ body {
     color: black;
   }
   .logo img {
-    max-width: 161px;
-    width: 10vw;
-    height: 5vw;
+   width: 300px;
+   height: 75px;
 }
 .header-left {
     float: left;
@@ -99,7 +98,7 @@ body {
 }
 
 .navbar_header a:hover, .dropdown_header:hover .dropbtn {
-    background-color: #007bff;
+    background-color: green;
     text-decoration: none;
     color: white;
 }
