--- a/classes/style.css
+++ b/classes/style.css
@@ -63,16 +63,19 @@ body {
     display: inline-block;
 }
 .breadcrumb-nav {
-	 border-top: 4px solid;
-	 border-top-color: black;
-}
-.navbar_header {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
+    border-top: 4px solid;
+    border-top-color: black;
 }
 
-.navbar_header a {
+/* Navbar container */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial;
+}
+
+/* Links inside the navbar */
+.navbar a {
     float: left;
     font-size: 16px;
     color: white;
@@ -81,47 +84,59 @@ body {
     text-decoration: none;
 }
 
-.dropdown_header {
+/* The dropdown container */
+.dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown_header .dropbtn {
-    font-size: 16px;    
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 16px;
     border: none;
     outline: none;
     color: white;
     padding: 14px 16px;
     background-color: inherit;
-    font: inherit;
-    margin: 0;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
 }
 
-.navbar_header a:hover, .dropdown_header:hover .dropbtn {
-    background-color: green;
-    text-decoration: none;
-    color: white;
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
 }
 
+/* Dropdown content (hidden by default) */
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    width: 100%;
-    left: 0;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-.dropdown-content .header {
-    background: #007bff;
-    padding: 16px;
-    color: white;
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
 }
 
-.dropdown_header:hover .dropdown-content {
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
     display: block;
 }
+
 
 /* Create three equal columns that floats next to each other */
 .column {
