--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -10,30 +10,7 @@
         document.getElementById("title").innerHTML = "{category}".toUpperCase();
     })
 </script>
-<style>
-    body {
-        background-color: lightgrey;
-        text-align: center;
-    }
-    #content {
-        margin-top: 2%;
-        width: 70%;
-        margin-left: 15%;
-        background-color: white;
-    }
-    .product {
-        display: inline-block;
-        text-align: center;
-        width: 50%;
-        height: 200px;
-    }
-    .product img {
-        height: 200px;
-    }
-    #products {
-        margin-top: 5%;
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="../classes/css/products.css">
 <div id="content">
     <h2 id="title"></h2>
     <div id="products">
