--- a/classes/css/products.css
+++ b/classes/css/products.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightgrey;
+    background-color: #686868;
     text-align: center;
 }
 #content {
@@ -12,18 +12,24 @@ body {
 #content h2 {
     font-weight: 100;
     font-size: 2.5em;
+    text-transform: uppercase;
 }
 .product {
-    border: 1px solid lightgrey;
+    border: 1px solid #ddd;
     border-radius: 10px;
     display: inline-block;
     text-align: center;
     width: 40%;
     height: 200px;
     margin: 5%;
+    /*transition: .5s ease;*/
 }
 .product img {
     height: 200px;
+    padding: 1em;
+}
+.product:hover {
+   /* opacity: 0.5;*/
 }
 #products {
     margin-top: 5%;
