--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -1,19 +1,29 @@
-
-<script>
-    $(document).ready(function (){
-        var products = {test};
-        var div = document.getElementById("products");
-        for(var i = 0; i < products.length; i++){
-            div.innerHTML += "<div class='product'><img src='../img/products/"+products[i]['ID']+".png'></br>"+products[i]['name']+"</div>";
-        }
-
-        document.getElementById("title").innerHTML = "{category}".toUpperCase();
-    })
-</script>
+<script src="../classes/js/products.js"></script>
 <link rel="stylesheet" type="text/css" href="../classes/css/products.css">
 <div id="content">
-    <h2 id="title"></h2>
+    <h2 id="title">{category}</h2>
     <div id="products">
 
+    </div>
+</div>
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="text" placeholder="Benutzernamen"/>
+                <input type="password" placeholder="Passwort"/>
+            </div>
+            <div class="modal-footer">
+                <p>Neu hier? <a style="color: red;" onclick="ShowRegister()">Jetzt Registrieren!</a></p>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Login</button>
+            </div>
+        </div>
     </div>
 </div>
