--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -1,5 +1,5 @@
-<script src="../classes/js/products.js"></script>
-<link rel="stylesheet" type="text/css" href="../classes/css/products.css">
+<script src="classes/js/products.js"></script>
+<link rel="stylesheet" type="text/css" href="classes/css/products.css">
 <div id="content">
     <h2 id="title">{category}</h2>
     <div id="products">
