--- a/classes/css/products.css
+++ b/classes/css/products.css
@@ -22,14 +22,14 @@ body {
     width: 40%;
     height: 200px;
     margin: 5%;
-    /*transition: .5s ease;*/
+    transition: .5s ease;
 }
 .product img {
     height: 200px;
     padding: 1em;
 }
 .product:hover {
-   /* opacity: 0.5;*/
+   opacity: 0.5;
 }
 #products {
     margin-top: 5%;
