--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -6,23 +6,23 @@
 
     </div>
 </div>
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <h5 class="modal-title" id="productLabel">Produkt</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <input type="text" placeholder="Benutzernamen"/>
-                <input type="password" placeholder="Passwort"/>
+            <div id="productContent" class="modal-body">
+                <img id="productImage" src="#">
+                <h2 id="productPrice"></h2>
+                <h3>Beschreibung</h3>
+                <div id="productDescription">
+                </div>
             </div>
             <div class="modal-footer">
-                <p>Neu hier? <a style="color: red;" onclick="ShowRegister()">Jetzt Registrieren!</a></p>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Login</button>
             </div>
         </div>
     </div>
