--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -18,7 +18,7 @@
             <div id="productContent" class="modal-body">
                 <img id="productImage" src="#">
                 <h2 id="productPrice"></h2>
-                <h3>Beschreibung</h3>
+                <h3><u>Produktbeschreibung:</u></h3>
                 <div id="productDescription">
                 </div>
             </div>
