--- a/classes/css/products.css
+++ b/classes/css/products.css
@@ -1,9 +1,8 @@
 body {
-    background-color: #686868;
+    background-image: linear-gradient( darkgrey, lightgrey, darkgrey);
     text-align: center;
 }
 #content {
-    margin-top: 2%;
     width: 70%;
     margin-left: 15%;
     background-color: white;
