--- a/templates/nav.tpl.html
+++ b/templates/nav.tpl.html
@@ -18,32 +18,43 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content-nav" id="login" style="right: 0; width: 25%; height: 45%;">
-                <input class="form-control login-input" type="text" placeholder="Benutzernamen"/>
-                <input class="form-control login-input" type="password" placeholder="Passwort"/>
-                <input class="btn btn-primary" type="submit" value="Anmelden"/>
+                <form action="index.php" method="post">
+                    <input class="form-control login-input" type="text" name ="mail" placeholder="Email Adresse"/>
+                    <input class="form-control login-input" type="password" name="password" placeholder="Passwort"/>
+                    <input class="btn btn-primary" type="submit" value="Anmelden"/>
+                </form>
                 <hr/>
                 Neu hier? <i id="register-link" onclick="showRegister()">Jetzt Registrieren!</i>
             </div>
         </div>
     </div>
 </div>
+<script src="classes/js/register.js"></script>
 
 <div class="modal fade" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Registrieren</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <input type="text" placeholder="Benutzernamen"/>
-                    <input type="password" placeholder="Passwort"/>
+                    <select id="gender"><option>Herr</option><option>Frau</option></select>
+                    <input id="lastname" type="text" class="form-control" placeholder="Name"/>
+                    <input id="name" type="text" class="form-control" placeholder="Vorname"/>
+                    <input id="street" type="text" class="form-control" placeholder="Straße"/>
+                    <input id="house" type="text" class="form-control" placeholder="Haus Nr."/>
+                    <input id="place"type="text" class="form-control" placeholder="Ort"/>
+                    <input id="postcode" type="text" class="form-control" placeholder="Postleitzahl"/>
+                    <input id="mail" type="text" class="form-control" placeholder="e-Mail Adresse"/>
+                    <input id="password" type="password" class="form-control" placeholder="Passwort"/>
+                    <input id="passwordTwo" type="password" class="form-control" placeholder="Passwort wiederholen"/>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Login</button>
+                    <button type="button" class="btn btn-primary" onclick="register()">Registrieren</button>
                 </div>
             </div>
         </div>
@@ -52,4 +63,11 @@
     function showRegister() {
         $("#register-modal").modal("toggle");
     }
+    $(document).ready(function() {
+        var error = '{error}';
+
+        if (error) {
+            swal(error, "", "error");
+        }
+    });
 </script>
