--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -17,12 +17,13 @@
             </div>
             <div id="productContent" class="modal-body">
                 <img id="productImage" src="#">
-                <h2 id="productPrice"></h2>
+                <div id="price">
+                    <h2 id="productPrice"></h2>
+                    <button class="btn" type="button" id="shop_button">In den Warenkorb &ensp;<i class="fas fa-shopping-cart"></i> </button>
+                </div>
                 <h3><u>Produktbeschreibung:</u></h3>
                 <div id="productDescription">
                 </div>
-            </div>
-            <div class="modal-footer">
             </div>
         </div>
     </div>
