--- a/classes/css/products.css
+++ b/classes/css/products.css
@@ -41,7 +41,7 @@ body {
     margin-top: 3%;
 }
 #productImage {
-    height: 300px;
+    width: 300px;
     display: inline-block;
     margin-right: 20%;
 }
