--- a/templates/buy.tpl.html
+++ b/templates/buy.tpl.html
@@ -1,4 +1,48 @@
 <link rel="stylesheet" type="text/css" href="classes/css/buy.css">
+<script src="classes/js/buy.js"></script>
 <div id="content">
     <h2>Kauf-Formular</h2>
+    <div id="formular">
+        <h3>Lieferadresse:</h3><h4>(bitte abweichende Daten ändern)</h4>
+        <form id="buy" action="#" method="post">
+            <select class="form-control" id="gender">
+                <option value="Herr">Herr</option>
+                <option value="Frau">Frau</option>
+            </select>
+            <input id="vorname" type="text" class="form-control" placeholder="Vorname" required>
+            <input id="nachname" type="text" class="form-control" placeholder="Nachname" required>
+            <input id="straße" type="text" class="form-control" placeholder="Straße" required>
+            <input id="housenumber" type="number" class="form-control" placeholder="Hausnummer" required>
+            <input id="plz" type="number" class="form-control" placeholder="Postleitzahl" required>
+            <input id="home" type="text" class="form-control" placeholder="Wohnort" required>
+            <input id="email" type="email" class="form-control" placeholder="Email-Adresse" required>
+        </form>
+        <div id="prices">
+            <h4>Gesamtpreis:</h4>
+            <h4 id="price">0 €</h4>
+        </div>
+        <div style="text-align: left; margin-left: 1%;">
+            <button class="btn btn-success" type="submit" form="buy">Kauf bestätigen</button>
+        </div>
+    </div>
 </div>
+<script>
+    $(document).ready(function () {
+        userdata();
+
+        var shopping_cart = JSON.parse('{shoppingcart}');
+        var sum = 0.00;
+        for(i in shopping_cart){
+            $.ajax({
+                url: "api.php?action=product&id="+shopping_cart[i],
+                dataType: 'json',
+                success: function (result) {
+                    sum += parseFloat(result.vk);
+                }
+            });
+        }
+        setTimeout(function () {
+            document.getElementById("price").innerText = sum+" €";
+        }, 1000)
+    })
+</script>
