--- a/templates/shoppingCart.tpl.html
+++ b/templates/shoppingCart.tpl.html
@@ -11,7 +11,7 @@
                 <p style="display: inline-block" id="summe">0</p>
                 <p style="display: inline-block">€</p>
             </div>
-            <button onclick="window.location.replace('index.php?request=buy')" class="btn">Jetzt kaufen&ensp;<i class="far fa-money-bill-alt"></i></button>
+            <button onclick="replace();" class="btn">Jetzt kaufen&ensp;<i class="far fa-money-bill-alt"></i></button>
         </div>
     </div>
 </div>
