--- a/templates/nav.tpl.html
+++ b/templates/nav.tpl.html
@@ -12,6 +12,7 @@
         </div>
         <a href="index.php?request=impressum">Impressum</a>
         <a href="index.php?request=aboutUs">Über Uns</a>
+        <a href="index.php?request=contact">Kontakt</a>
         <div id="sign_in" class="dropdown-navbar" onclick="document.getElementById('login').style.display = block" style="float: right;">
             <button class="dropbtn-navbar">Anmelden
                 <i class="fa fa-caret-down"></i>
@@ -26,8 +27,8 @@
                 Neu hier? <i id="register-link" onclick="showRegister()">Jetzt Registrieren!</i>
             </div>
         </div>
+        <a href="index.php?request=logout" onclick="window.location.replace('index.php');" style="float: right; display: none;" id="logout"><i class="fas fa-power-off"></i></a>
         <a id="username_navbar"></a>
-        <a href="index.php?request=logout" onclick="window.location.replace('index.php');" style="float: right; display: none;" id="logout">Logout</a>
         <a id="shopping_cart" href="index.php?request=shopping_cart" style="float: right; display: none"><i class="fas fa-shopping-cart"></i>&ensp;Warenkorb</a>
     </div>
 </div>
