--- a/templates/impressum.tpl.html
+++ b/templates/impressum.tpl.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="classes/css/impressum.css">
 <div id="content">
+    <h2 id="header">Impressum</h2>
     <h2>SmartSystems GmbH<br>Büsumer Straße 46<br>24768 Rendsburg</h2>
     <br>
     <h2>Geschäftsführer: Lukas Kemper</h2>
@@ -22,5 +23,5 @@
     <h2>6. Änderungen dieser Datenschutzbestimmungen</h2>
     <p>Wir werden diese Richtlinien zum Schutz Ihrer persönlichen Daten von Zeit zu Zeit aktualisieren. Sie sollten sich diese Richtlinien gelegentlich ansehen, um auf dem Laufenden darüber zu bleiben, wie wir Ihre Daten schützen und die Inhalte unserer Website stetig verbessern. Sollten wir wesentliche Änderungen bei der Sammlung, der Nutzung und/oder der Weitergabe der uns von Ihnen zur Verfügung gestellten personenbezogenen Daten vornehmen, werden wir Sie durch einen eindeutigen und gut sichtbaren Hinweis auf der Website darauf aufmerksam machen. Mit der Nutzung der Webseite erklären Sie sich mit den Bedingungen dieser Richtlinien zum Schutz persönlicher Daten einverstanden.</p>
 
-    <p>Bei Fragen zu diesen Datenschutzbestimmungen wenden Sie sich bitte über unsere Kontakt-Seite an uns.</p>
+    <p>Bei Fragen zu diesen Datenschutzbestimmungen wenden Sie sich bitte über unsere <a href="index.php?request=contact">Kontakt-Seite</a> an uns.</p>
 </div>
