--- a/templates/nav.tpl.html
+++ b/templates/nav.tpl.html
@@ -11,7 +11,7 @@
               </div>
         </div>
         <a href="index.php?request=impressum">Impressum</a>
-        <a href="index.php?request=aboutUs">Über Uns</a>
+        <a href="index.php?request=about">Über Uns</a>
         <a href="index.php?request=contact">Kontakt</a>
         <div id="sign_in" class="dropdown-navbar" onclick="document.getElementById('login').style.display = block" style="float: right;">
             <button class="dropbtn-navbar">Anmelden
