--- a/classes/css/impressum.css
+++ b/classes/css/impressum.css
@@ -6,7 +6,7 @@ body {
     width: 70%;
     margin-left: 15%;
     background-color: white;
-    padding: 4em 10em;
+    padding: 2em 10em;
 }
 h1 {
     font-size: 2.5em;
@@ -19,4 +19,10 @@ h2 {
 p {
     font-size: 1.25em;
     font-weight: 300;
+}
+#header {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 5%;
+    font-size: 2.5em;
 }
