--- a/templates/about.tpl.html
+++ b/templates/about.tpl.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" type="text/css" href="classes/css/about.css">
 <div id="content">
     <h2>Über Uns</h2>
+    <div id="text">
+        <h3>Wer sind wir?</h3>
+    </div>
 </div>
