--- a/classes/css/about.css
+++ b/classes/css/about.css
@@ -13,3 +13,8 @@ h2 {
     font-size: 2.5em;
     text-transform: uppercase;
 }
+h3 {
+    font-weight: 100;
+    font-size: 2em;
+    text-align: left;
+}
