--- a/templates/about.tpl.html
+++ b/templates/about.tpl.html
@@ -3,5 +3,23 @@
     <h2>Über Uns</h2>
     <div id="text">
         <h3>Wer sind wir?</h3>
+        <img src="img/wir.png">
+        <p>Wir,<br> das sind (von Links) Alexander Stüben, Lukas Dehne, Lukas Kemper, Cristoph Köpke und Torge Schirk, sind ein junges und ambitionniertes Unternehmen, welches Ihren Alltag erleichtern möchte.<br>
+           Mit Produkten aus dem Smart Home Bereich und großen Partnern wie SONOS, Phillips und Bosch wollen wir Ihr Leben vereinfachen und das Wohnen in Ihrem Haus so angenehm wie möglich machen.<br>
+            <br><b>Lukas Kemper ( Geschäftleitung CEO )</b>
+            <br><b>Torge Schirk ( Finanz- und Vetriebsmanagement CFO )</b>
+            <br><b>Alexander Stüben ( IT-Management CTO )</b>
+            <br><b>Cristoph Köpke ( Projektmanagement )</b>
+            <br><b>Lukas Dehne ( Facility- und Personalmanagement )</b>
+        </p>
+        <p></p>
+        <br>
+        <h3><b>Unser Motto: Wir machen das für Sie!</b></h3>
+        <br>
+        <h3>Unsere Leistungen</h3>
+        <p>Als Reseller-Unternehmen verkaufen wir qualitativ hochwertige Produkte von bekannten Markenherstellern für Ihr Digital Lifestyle.
+        <br> Desweiteren liefern wir die von Ihnen gekauften Produkte direkt am Folgetag zu Ihnen nach Hause, kein nerviges Warten und Abholen.
+            <br> Außerdem schließen wir auf Wunsch die Geräte direkt in Ihrem Haus an, damit bei Ihnen auf Anhieb alles läuft und Sie keine Anschlussprobleme haben.
+        <br>Sollte ein Produkt bei Ihnen nicht mehr richtig funktionieren helfen wir Ihnen gerne und bringen den Fehler wieder in Ordnung, damit Sie sich um nichts mehr Sorgen müssen.</p>
     </div>
 </div>
