--- a/classes/css/about.css
+++ b/classes/css/about.css
@@ -16,5 +16,18 @@ h2 {
 h3 {
     font-weight: 100;
     font-size: 2em;
+}
+p {
+    margin-top: 2%;
+    font-weight: 100;
+    font-size: 1.5em;
+}
+img {
+    height: 500px;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+}
+#text {
+    margin-top: 5%;
     text-align: left;
 }
