--- a/templates/contact.tpl.html
+++ b/templates/contact.tpl.html
@@ -2,12 +2,13 @@
 <div id="content">
     <h2>Kontakt</h2>
     <div id="content_inner">
-        <h3>SmartSystems GmbH<br>Büsumer Straße 46<br>24768 Rendsburg</h3>
+        <h3>SmartSystems GmbH<br>Büsumer Straße 46<br>D-24768 Rendsburg</h3>
         <br>
         <h3>Geschäftsführer: Lukas Kemper</h3>
         <br>
-        <h3>Telefon: 0151 22046000</h3>
-        <h3>Fax: </h3>
+        <h3>Telefon: +(49) 4331 248543</h3>
+        <h3>Mobil: +(49) 151 22046000</h3>
+        <h3>Fax: +(49) 4331 698896</h3>
         <h3>Email: info@smsy.de</h3>
         <br>
         <h3>Anfahrt:</h3>
