--- a/templates/products.tpl.html
+++ b/templates/products.tpl.html
@@ -19,6 +19,7 @@
                 <img id="productImage" src="#">
                 <div id="price">
                     <h2 id="productPrice"></h2>
+                    <p>inkl. MwSt</p>
                     <button class="btn" type="button" id="shop_button" onclick="shopping(this.value);">In den Warenkorb &ensp;<i class="fas fa-shopping-cart"></i> </button>
                 </div>
                 <h3><u>Produktbeschreibung:</u></h3>
